@@ -174,7 +174,7 @@ void SIMULATOR_Init(char  *simulator_configuration_filename,
       }
       */
 
-      if (IO_fseeko(configuration_file, 0, SEEK_SET) == -1)
+      if (IO_fseeko(configuration_file, (off_t) 0, SEEK_SET) == -1)
       {
         die ("Error initializing configuration file %s", strerror(errno));
       }
@@ -192,7 +192,7 @@ void SIMULATOR_Init(char  *simulator_configuration_filename,
 
     case NEW_CONFIGURATION:
 
-      if (IO_fseeko(configuration_file, 0, SEEK_SET) == -1)
+      if (IO_fseeko(configuration_file, (off_t) 0, SEEK_SET) == -1)
       {
         die ("Error initializing configuration file: %s", strerror(errno));
       }
